--- a/app/src/main/res/layout/activity_image_inside.xml
+++ b/app/src/main/res/layout/activity_image_inside.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImgActivity1">
+    tools:context=".ImageInsideActivity">
 
     <ImageView
+        android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/img1"/>
