--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,49 +8,9 @@
     tools:context=".MainActivity"
     android:background="#66BB6A">
 
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="주사위 앱"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:textStyle="bold"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp">
-
-        <ImageView
-            android:id="@+id/dice1"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_weight="1"
-            android:src="@drawable/dice_1"/>
-
-        <ImageView
-            android:id="@+id/dice2"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_weight="1"
-            android:src="@drawable/dice_1"/>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnDiceStart"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="START"
-        android:backgroundTint="#00ffffff"
-        android:layout_margin="50dp"/>
-
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
